--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v3.4.0
     hooks:
     -   id: trailing-whitespace
     -   id: mixed-line-ending
@@ -9,3 +9,10 @@ repos:
     rev: 20.8b1
     hooks:
     -   id: black
+        args: [--line-length=120]
+        files: batteries/
+        exclude: |
+            (?x)(
+                ^tests/|
+                ^examples/
+            )^tests/
