--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,18 @@ repos:
     -   id: trailing-whitespace
     -   id: mixed-line-ending
 
+-   repo: https://github.com/pre-commit/mirrors-isort
+    rev: v5.7.0
+    hooks:
+    -   id: isort
+        files: batteries/
+        exclude: |
+            (?x)(
+                ^tests/|
+                ^examples/
+            )^tests/
+        args: [--line-length=120]
+
 -   repo: https://github.com/psf/black
     rev: 20.8b1
     hooks:
