Root Mean Square Layer Normalization (#7)
* Updated DDP example (#1)

* average metter

* link to good train example

* ddp example

* verbosity option

* DDP tests fix (#2)

* average metter

* link to good train example

* reduce tests for different number of gpus

* Feature: additional seed arguments (for cuda) (#3)

* seed args & docs & codestyle

* removed `packaging`

* loggers & store any key-value pairs in checkpoint (#4)

* Pre commit config

* pre commit hook

* isort line length

* moved tests inside package

* rms norm; tests moved to batteries; codestyle

* codestyle

* commented isort

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,10 +25,12 @@ jobs:
 
       - name: Codestyle
         run: |
-          # imports
-          isort --line-length=120 --check-only batteries
+          # # imports
+          # isort --line-length=120 --check-only batteries
+
           # general check
           black --line-length=120 --check batteries
+
           # python code quality check
           flake8 \
             --count \
@@ -38,4 +40,4 @@ jobs:
 
       - name: Run tests
         run: |
-          PYTHONPATH=. pytest -ra -q -v tests
+          PYTHONPATH=. pytest -ra -q -v .
