--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,15 +3,15 @@ repos:
     rev: v3.4.0
     hooks:
     -   id: trailing-whitespace
-        files: batteries/
+        files: src/
     -   id: mixed-line-ending
-        files: batteries/
+        files: src/
 
 -   repo: https://github.com/pre-commit/mirrors-isort
     rev: v5.7.0
     hooks:
     -   id: isort
-        files: batteries/
+        files: src/
         exclude: |
             (?x)(
                 ^tests/|
@@ -24,7 +24,7 @@ repos:
     hooks:
     -   id: black
         args: [--line-length=120]
-        files: batteries/
+        files: src/
         exclude: |
             (?x)(
                 ^tests/|
