--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,16 +28,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install uv
         run: |
-          python -m pip install --upgrade pip
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: Codestyle
         run: |
-          isort --line-length=120 --profile=black --check-only src && \
-          black --line-length=120 --check src && \
-          flake8 --count --max-line-length=120 --ignore=Q000,D100,D205,D212,D415,W605 src
+          uvx isort --line-length=120 --profile=black --check-only src && \
+          uvx black --line-length=120 --check src && \
+          uvx flake8 --count --max-line-length=120 --ignore=Q000,D100,D205,D212,D415,W605 src
 
       - name: Run tests
         run: |
-          PYTHONPATH=src pytest -ra -q -v .
+          uv run pytest -ra -q -v
