[refactoring] Migration to `uv` (#9)
Refactored project and migrated to use uv as a package manager.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,17 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v5.0.0
     hooks:
     -   id: trailing-whitespace
-        files: batteries/
+        files: src/
     -   id: mixed-line-ending
-        files: batteries/
+        files: src/
 
 -   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.7.0
+    rev: v5.10.1
     hooks:
     -   id: isort
-        files: batteries/
+        files: src/
         exclude: |
             (?x)(
                 ^tests/|
@@ -20,11 +20,11 @@ repos:
         args: [--line-length=120]
 
 -   repo: https://github.com/psf/black
-    rev: 20.8b1
+    rev: 25.1.0
     hooks:
     -   id: black
         args: [--line-length=120]
-        files: batteries/
+        files: src/
         exclude: |
             (?x)(
                 ^tests/|
