--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,34 +1,48 @@
-name: Python package
+name: Python tests
 
-on: [push]
+on: 
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+env:
+  OMP_NUM_THREADS: 2
+  MKL_NUM_THREADS: 2
 
 jobs:
-  build:
-
-    runs-on: ubuntu-20.04
+  test:
+    name: 🔄 Runing tests on ${{ matrix.os }} with Python ${{ matrix.python }}
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        os: [ubuntu-latest]
+        python: ['3.10', '3.12']
+        torch: [{base: '1.13.0', vision: '0.14.0'}, {base: '2.5.1', vision: '0.20.1'}]
+        testmarker: ['-k "not test_models"', '-m base', '-m cfg', '-m torchscript', '-m features', '-m fxforward', '-m fxbackward']
+        exclude:
+          - python: '3.12'
+            torch: {base: '1.13.0', vision: '0.14.0'}
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install uv
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements/requirements-tests.txt ]; then pip install -r requirements/requirements-tests.txt; fi
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: Codestyle
         run: |
-          isort --line-length=120 --profile=black --check-only batteries && \
-          black --line-length=120 --check batteries && \
-          flake8 --count --max-line-length=120 --ignore=Q000,D100,D205,D212,D415,W605 batteries
+          uvx isort --line-length=120 --profile=black --check-only src && \
+          uvx black --line-length=120 --check src && \
+          uvx flake8 --count --max-line-length=120 --ignore=Q000,D100,D205,D212,D415,W605 src
 
       - name: Run tests
         run: |
-          PYTHONPATH=. pytest -ra -q -v .
+          uv run pytest -ra -q -v
